# qsing-box

./: CMakeLists.txt  README.md
src/: main_window.cpp  main_window.h  main_window.ui
